--- a/templates/admin.html
+++ b/templates/admin.html
@@ -172,24 +172,24 @@
                                 <tbody>
                                     <tr>
                                         <td><strong>Admin IC</strong></td>
-                                        <td><input type="text" class="form-control" id="modalAdminIC" name="admin_ic"></td>
+                                        <td><input type="text" class="form-control" id="modalAdminIC" name="admin_ic" {% if not is_root %}disabled{% endif %}></td>
                                     </tr>
                                     <tr>
                                         <td><strong>Name</strong></td>
-                                        <td><input type="text" class="form-control" id="modalName" name="name"></td>
+                                        <td><input type="text" class="form-control" id="modalName" name="name" {% if not is_root %}disabled{% endif %}></td>
                                     </tr>
                                     <tr>
                                         <td><strong>Email</strong></td>
-                                        <td><input type="email" class="form-control" id="modalEmail" name="email"></td>
+                                        <td><input type="email" class="form-control" id="modalEmail" name="email" {% if not is_root %}disabled{% endif %}></td>
                                     </tr>
                                     <tr>
                                         <td><strong>Phone Number</strong></td>
-                                        <td><input type="text" class="form-control" id="modalPhoneNumber" name="phone_number"></td>
+                                        <td><input type="text" class="form-control" id="modalPhoneNumber" name="phone_number" {% if not is_root %}disabled{% endif %}></td>
                                     </tr>
                                     <tr>
                                         <td><strong>Gender</strong></td>
                                         <td>
-                                            <select class="form-select" id="modalGender" name="gender">
+                                            <select class="form-select" id="modalGender" name="gender" {% if not is_root %}disabled{% endif %}>
                                                 <option value="Male">Male</option>
                                                 <option value="Female">Female</option>
                                                 <option value="Other">Other</option>
