--- a/templates/students.html
+++ b/templates/students.html
@@ -152,9 +152,6 @@
                         <th style="width: 20%;">
                             <span id="sortName" class="sort-icon" onclick="sortTable('name')">⬍</span> Name
                         </th>
-                        <th style="width: 15%;">
-                            <span id="sortEmail" class="sort-icon" onclick="sortTable('email')">⬍</span> Email
-                        </th>
                         <th style="width: 10%;">
                             <span id="sortFormClass" class="sort-icon" onclick="sortTable('form_class')">⬍</span> Class
                         </th>
@@ -166,6 +163,9 @@
                         </th>
                         <th style="width: 15%;">
                             <span id="sortOutingBanPeriod" class="sort-icon" onclick="sortTable('outing_ban_period')">⬍</span> Outing Ban
+                        </th>
+                        <th style="width: 15%;">
+                            <span id="sortFingerprint" class="sort-icon" onclick="sortTable('fid')">⬍</span> Fingerprint
                         </th>
                         <th class="text-center" style="width: 10%;">Manage</th>
                     </tr>
@@ -185,25 +185,25 @@
                     </div>
                     <!-- Modal Body with Form Fields -->
                     <div class="modal-body">
-                        <div class="table-responsive"> <!-- Add table-responsive for horizontal scroll if needed -->
+                        <div class="table-responsive">
                             <table class="table table-bordered">
                                 <tbody>
                                     <tr>
                                         <td><strong>Name</strong></td>
-                                        <td><input type="text" class="form-control" id="modalName" name="name"></td>
+                                        <td><input type="text" class="form-control" id="modalName" name="name" {% if user_role != 'Admin' %}disabled{% endif %}></td>
                                     </tr>
                                     <tr>
                                         <td><strong>Student IC</strong></td>
-                                        <td><input type="text" class="form-control" id="modalStudentIC" name="student_ic"></td>
+                                        <td><input type="text" class="form-control" id="modalStudentIC" name="student_ic" {% if user_role != 'Admin' %}disabled{% endif %}></td>
                                     </tr>
                                     <tr>
                                         <td><strong>Email</strong></td>
-                                        <td><input type="email" class="form-control" id="modalEmail" name="email"></td>
+                                        <td><input type="text" class="form-control" id="modalEmail" name="email" {% if user_role != 'Admin' %}disabled{% endif %}></td>
                                     </tr>
                                     <tr>
                                         <td><strong>Gender</strong></td>
                                         <td>
-                                            <select class="form-select" id="modalGender" name="gender">
+                                            <select class="form-select" id="modalGender" name="gender" {% if user_role != 'Admin' %}disabled{% endif %}>
                                                 <option value="Male">Male</option>
                                                 <option value="Female">Female</option>
                                                 <option value="Other">Other</option>
@@ -212,35 +212,35 @@
                                     </tr>
                                     <tr>
                                         <td><strong>Form Class</strong></td>
-                                        <td><input type="text" class="form-control" id="modalFormClass" name="form_class"></td>
+                                        <td><input type="text" class="form-control" id="modalFormClass" name="form_class" {% if user_role != 'Admin' %}disabled{% endif %}></td>
                                     </tr>
                                     <tr>
                                         <td><strong>Race</strong></td>
-                                        <td><input type="text" class="form-control" id="modalRace" name="race"></td>
+                                        <td><input type="text" class="form-control" id="modalRace" name="race" {% if user_role != 'Admin' %}disabled{% endif %}></td>
                                     </tr>
                                     <tr>
                                         <td><strong>Citizenship</strong></td>
-                                        <td><input type="text" class="form-control" id="modalCitizenship" name="citizenship"></td>
+                                        <td><input type="text" class="form-control" id="modalCitizenship" name="citizenship" {% if user_role != 'Admin' %}disabled{% endif %}></td>
                                     </tr>
                                     <tr>
                                         <td><strong>Family Members</strong></td>
-                                        <td><input type="number" class="form-control" id="modalFamilyMembers" name="family_members"></td>
+                                        <td><input type="number" class="form-control" id="modalFamilyMembers" name="family_members" {% if user_role != 'Admin' %}disabled{% endif %}></td>
                                     </tr>
                                     <tr>
                                         <td><strong>Address</strong></td>
-                                        <td><textarea class="form-control" id="modalAddress" name="address"></textarea></td>
+                                        <td><textarea class="form-control" id="modalAddress" name="address" {% if user_role != 'Admin' %}disabled{% endif %}></textarea></td>
                                     </tr>
                                     <tr>
                                         <td><strong>Home Distance</strong></td>
-                                        <td><input type="text" class="form-control" id="modalHomeDistance" name="home_distance"></td>
+                                        <td><input type="text" class="form-control" id="modalHomeDistance" name="home_distance" {% if user_role != 'Admin' %}disabled{% endif %}></td>
                                     </tr>
                                     <tr>
                                         <td><strong>Guardian Status</strong></td>
-                                        <td><input type="text" class="form-control" id="modalGuardianStatus" name="guardian_status"></td>
+                                        <td><input type="text" class="form-control" id="modalGuardianStatus" name="guardian_status" {% if user_role != 'Admin' %}disabled{% endif %}></td>
                                     </tr>
                                     <tr>
                                         <td><strong>Guardian Contact</strong></td>
-                                        <td><input type="text" class="form-control" id="modalGuardianContact" name="guardian_contact"></td>
+                                        <td><input type="text" class="form-control" id="modalGuardianContact" name="guardian_contact" {% if user_role != 'Admin' %}disabled{% endif %}></td>
                                     </tr>
                                     <tr>
                                         <td><strong>Ban Period</strong></td>
@@ -279,8 +279,8 @@
                 row.appendChild(noCell);
 
                 const fields = [
-                    'student_ic', 'name', 'email', 'form_class', 'race', 
-                    'gender', 'outing_ban_period'
+                    'student_ic', 'name', 'form_class', 'race', 
+                    'gender', 'outing_ban_period', 'fid'
                 ];
 
                 fields.forEach(field => {
@@ -298,6 +298,14 @@
                         }
                     } else {
                         cell.textContent = student[field];
+                    }
+
+                    if (field === 'fid') {
+                        if (student.fid) {
+                            cell.textContent = "Registered";
+                        } else {
+                            cell.textContent = "Missing";
+                        }
                     }
                     row.appendChild(cell);
                 });
@@ -349,6 +357,7 @@
         // Open the modal and pre-fill form fields with student details
         function openModal(student) {
             // Pre-fill form fields with student details
+            console.log(student)
             document.getElementById('modalStudentIC').value = student.student_ic;
             document.getElementById('modalName').value = student.name;
             document.getElementById('modalEmail').value = student.email;
