--- a/templates/students.html
+++ b/templates/students.html
@@ -263,6 +263,8 @@
     <script>
         const students = {{ student | tojson }};
 
+        console.log(students);
+
         let statusSortDirection = 'asc'; // Track the sort direction for status
 
         // Display the table
